# rctx

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: bump-homebrew-tap.yml  ci.yml  release.yml
.rctx/claims/: api-contract.md  example-claim.md
.rctx/claims/api/: contract.md
.rctx/claims/arch/: index-is-disposable-cache.md
.rctx/claims/ci/: tests-run-on-push.md
.rctx/claims/release/: homebrew-tap.md
docs/adr/: 0001-rctx-architecture.md
src/: claim.cpp  claim.hpp  claim_id.cpp  claim_id.hpp  git.cpp  git.hpp  index.cpp  index.hpp  main.cpp  registry.cpp  registry.hpp  uuid.cpp  uuid.hpp  watch.cpp  watch.hpp
tests/: cli_error.cmake  test_claim.cpp  test_index.cpp  test_registry.cpp  test_watch.cpp
tests/fixtures/: not-a-db.txt
